validate utility
Help admin add and validate the residents
